fix: produt details img height on small device

--- a/src/components/ProductDetails/CardDetails.css
+++ b/src/components/ProductDetails/CardDetails.css
@@ -20,6 +20,11 @@
   border-radius: 20px;
 }
 
+.product-img {
+  height: 500px;
+  margin-bottom: 20px;
+}
+
 .product-details {
   border-bottom: 1px solid #d7d7d7;
   padding-bottom: 1rem;
